# Litreview

./: .gitignore  MANIFEST.in  README.md  litreview_config.json  pyproject.toml  requirements.txt  start_litreview.bat
docs/: AI文献综述生成器-完整PRD.md
frontend/: DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActionBar.tsx  ChatBubble.tsx  DocStatCard.tsx  GlassPanel.tsx  Layout.tsx  PaperCard.tsx  PaperShell.tsx  ProgressBar.tsx  ProgressHeader.tsx  SectionHeader.tsx  ThreeScene.tsx  UIOverlay.tsx
frontend/src/hooks/: index.ts
frontend/src/mocks/: data.ts  handlers.ts
frontend/src/pages/: ClusterPage.tsx  GeneratePage.tsx  HomePage.tsx  PlanPage.tsx  ResultPage.tsx  StartPage.tsx  SummaryPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: AppContext.tsx
frontend/src/types/: index.ts  node.d.ts
frontend/src/utils/: index.ts
litreview/: __init__.py  app.py  cli.py  mock_data.py  server.py  state.py
litreview/services/: __init__.py  cluster_service.py  core_algorithm.py  gen_final_LR.py  generate_service.py  summary_service.py  system_service.py  upload_service.py  visualize_and_gen_outline.py
